welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:32: error: expected class or object definition
run()
^PatternPicture:35: error: Unmatched closing brace '}' ignored here
}
^